name: starter
version: 0.0.1
cabal-version: >=1.10
build-type: Simple
license: MIT
license-file: LICENSE.md
maintainer: Tony Day <tonyday567@gmail.com>
bug-reports: https://github.com/tonyday567/starter/issues
synopsis: Haskell project starter repo 
description: <https://github.com/tonyday567/starter>
extra-source-files:
    README.md

library
    hs-source-dirs: library
    exposed-modules:
        Starter
    build-depends:  base ==4.*
                  , data-default
                  , lens   
                            
    default-language: Haskell2010
    ghc-options: -Wall
                     
executable starter
    main-is: Main.hs
    hs-source-dirs: executable
    build-depends: base ==4.*
                 , starter -any
    default-language: Haskell2010
    ghc-options: -Wall

test-suite test
    main-is: Test.hs
    hs-source-dirs: testing
    build-depends: base ==4.*
                 , starter -any
                 , hspec
                 , tasty
                 , tasty-hspec
                
    default-language: Haskell2010
    type: exitcode-stdio-1.0
